--- a/public/formdemo/index.html
+++ b/public/formdemo/index.html
@@ -431,16 +431,16 @@ const factsElement = document.getElementById('factsContent');
 const physicalExamGroupOptions = [
     { id: 'vitals', placeholder: 'Include temperature, heart rate, blood pressure, respiratory rate, oxygen saturation', label: 'Vitals:' },
     //{ id: 'headPE', type: 'text', placeholder: '', label: 'Head:' },
-    { id: 'generalPE', placeholder: 'anxious appearing', label: 'General appearance:' },
-    { id: 'HEENTPE', placeholder: 'atraumatic, PERRLA, etc', label: 'HEENT:' },
-    { id: 'lungsPE', placeholder: 'expiratory wheezes in the RLL base...', label: 'Lungs:' },
-    { id: 'heartPE', placeholder: 'irregularly irregular rhythm,...', label: 'Heart:' },
-    { id: 'abdomenPE', placeholder: 'tenderness to palpation...', label: 'Abdomen:' },
+    { id: 'generalPE', placeholder: 'Well-appearing female, NAD, pleasant...', label: 'General appearance:' },
+    { id: 'HEENTPE', placeholder: 'Atraumatic, PERRL, EOM\'s intact, sinuses NT, oropharynx clear, no erythema or mucosal ulcerations noted...', label: 'HEENT:' },
+    { id: 'lungsPE', placeholder: 'Lungs CTA bilaterally, no wheezes, no rales or rhonchi noted...', label: 'Lungs:' },
+    { id: 'heartPE', placeholder: 'RRR, no murmurs noted...', label: 'Heart:' },
+    { id: 'abdomenPE', placeholder: 'Soft, NT, ND, NABS throughout...', label: 'Abdomen:' },
     //{ id: 'genitourinaryPE', placeholder: '', label: 'Genitourinary:' },
-    { id: 'extremitiesPE', placeholder: 'MAE...', label: 'Extremities:' },
-    { id: 'lymphNodesPE', placeholder: 'lymphadenopathy...', label: 'Lymph nodes:' },
-    { id: 'skinPE', placeholder: 'erythematous...', label: 'Skin:' },
-    { id: 'neuroPE', placeholder: 'CN II XII grossly intact... ', label: 'Neuro:' },
+    { id: 'extremitiesPE', placeholder: 'MAE\'s x 4, strength equal bilaterally...', label: 'Extremities:' },
+    { id: 'lymphNodesPE', placeholder: 'no LAD in cervical, supraclavicular, axillary or inguinal nodes...', label: 'Lymph nodes:' },
+    { id: 'skinPE', placeholder: 'no rashes or lesions noted. No c/c/e...', label: 'Skin:' },
+    { id: 'neuroPE', placeholder: 'CN II-XII grossly intact, + sensation to light touch, A & O x3... ', label: 'Neuro:' },
     { id: 'otherPE', placeholder: 'anything not listed...', label: 'Other:' }
 ];
 createTextareaGroup(factsElement, 'physicalExamData', 'Physical Exam Findings: (include pertinent positives and negatives)*', physicalExamGroupOptions);
