--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
             </script>
             <textarea id="conversation_input" onchange="sendMessage(isDiagnosed, null)" placeholder="Type your message here..."></textarea>
             <button id="conversation_send" onclick="sendMessage(isDiagnosed, null )">Send</button>
+            <button id="conversation_send" onclick="sendMessage(isDiagnosed, 'Actions', '**Action** You performed a physical')">Perform Physical</button>
             <button id="download_history" onclick="downloadTxtFile()">Finish Exam</button>
 
 
