--- a/public/index.html
+++ b/public/index.html
@@ -74,9 +74,9 @@
 
             </script>
             <textarea id="conversation_input" onchange="sendMessage(isDiagnosed, null)" placeholder="Type your message here..."></textarea>
-            <button id="conversation_send" onclick="sendMessage(isDiagnosed, null )">Send</button>
-            <button id="conversation_send" onclick="sendMessage(isDiagnosed, 'Actions', '**Action** You performed a physical')">Perform Physical</button>
-            <button id="download_history" onclick="downloadTxtFile()">Finish Exam</button>
+            <button padding = 5px, id="conversation_send" onclick="sendMessage(isDiagnosed, null )">Send</button>
+            <button padding = 5px, id="conversation_send" onclick="sendMessage(isDiagnosed, 'Actions', '**Action** You performed a physical exam.')">Perform Physical</button>
+            <button padding = 5px, id="download_history" onclick="downloadTxtFile()">Finish Exam</button>
 
 
         </div>
