--- a/public/index.html
+++ b/public/index.html
@@ -74,9 +74,9 @@
 
             </script>
             <textarea id="conversation_input" onchange="sendMessage(isDiagnosed, null)" placeholder="Type your message here..."></textarea>
-            <button padding = 5px, id="conversation_send" onclick="sendMessage(isDiagnosed, null )">Send</button>
-            <button padding = 5px, id="conversation_send" onclick="sendMessage(isDiagnosed, 'Physical Exam', '**Action** You performed a physical exam.')">Perform Physical</button>
-            <button padding = 5px, id="download_history" onclick="downloadTxtFile()">End Scenario</button>
+            <button  id="conversation_send" onclick="sendMessage(isDiagnosed, null )">Send</button>
+            <button  id="conversation_action" onclick="sendMessage(isDiagnosed, 'Physical Exam', '**Action** You performed a physical exam.')">Perform Physical</button>
+            <button  id="download_history" onclick="downloadTxtFile()">End Scenario</button>
 
 
         </div>
