--- a/public/formdemo/index.html
+++ b/public/formdemo/index.html
@@ -572,7 +572,7 @@ function generateJSONFile() {
 }
 
 const formjson = document.getElementById('scenarioForm');
-form.addEventListener('submit', (event) => {
+formjson.addEventListener('submit', (event) => {
   event.preventDefault();
   generateJSONFile();
 });
